--- a/src/components/background/styles.css
+++ b/src/components/background/styles.css
@@ -12,7 +12,7 @@
 .background {
     position: fixed;
     width: 100vw;
-    height: 100vh;
+    height: 100%;
     top: 0;
     left: 0;
     margin: 0;
