--- a/src/components/intro/styles.css
+++ b/src/components/intro/styles.css
@@ -1,10 +1,10 @@
-.overview {
+.overviewdesktop {
   position: relative;
   width: 97vw;
   height: 97vh;
   flex-direction: row;
   justify-content: center;
-  gap: 1.25rem;
+  gap: 1rem;
   align-items: center;
   display: flex;
   box-sizing: border-box;
@@ -14,15 +14,41 @@
   padding-left: 1rem;
   padding-right: 1rem;
 }
+.overviewmobile {
+  position: relative;
+  width: 97vw;
+  flex-direction: column;
+  justify-content: center;
+  gap: 1rem;
+  align-items: center;
+  display: flex;
+  box-sizing: border-box;
+  border-width: 0;
+  border-style: solid;
+  border-color: #e5e7eb;
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
+}
 
-.cardview {
+.cardviewdesktop {
   padding: 1rem;
   width: 50%;
   max-height: 100%;
   tab-size: 4;
   line-height: inherit;
   margin: 7px;
-  font-size: 1.25rem;
+  font-size: 1.1rem;
+  line-height: 1.75rem;
+}
+
+.cardviewmobile {
+  padding: 1rem;
+  width: 90%;
+  max-height: 100%;
+  tab-size: 4;
+  line-height: inherit;
+  margin: 7px;
+  font-size: 1rem;
   line-height: 1.75rem;
 }
 
@@ -32,5 +58,6 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
+  gap: 1rem;
   color: white;
 }
