--- a/src/components/background/styles.css
+++ b/src/components/background/styles.css
@@ -1,74 +1,80 @@
 @keyframes cube {
-    from {
-        transform: scale(0) rotate(0deg) translate(-50%, -50%);
-        opacity: 1;
-    }
-    to {
-        transform: scale(20) rotate(960deg) translate(-50%, -50%);
-        opacity: 0;
-    }
+  from {
+    transform: scale(0) rotate(0deg) translate(-50%, -50%);
+    opacity: 1;
+  }
+  to {
+    transform: scale(20) rotate(960deg) translate(-50%, -50%);
+    opacity: 0;
+  }
 }
 
 .background {
-    position: fixed;
-    width: 100vw;
-    height: 100%;
-    top: 0;
-    left: 0;
-    margin: 0;
-    padding: 0;
-    background: #0040C1;
-    overflow: hidden;
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  margin: 0;
+  padding: 0;
+  background: linear-gradient(135deg, #0040c1, #001d3d);
+  overflow: hidden;
 }
 .background li {
-    position: absolute;
-    top: 80vh;
-    left: 45vw;
-    width: 10px;
-    height: 10px;
-    border: solid 1px #0039ad;
-    color: transparent;
-    transform-origin: top left;
-    transform: scale(0) rotate(0deg) translate(-50%, -50%);
-    animation: cube 7s ease-in forwards infinite;
+  position: absolute;
+  top: 80vh;
+  left: 45vw;
+  width: 10px;
+  height: 10px;
+  border: solid 1px #0039ad;
+  color: transparent;
+  transform-origin: top left;
+  transform: scale(0) rotate(0deg) translate(-50%, -50%);
+  animation: cube 7s ease-in forwards infinite;
 }
 
 .background li:nth-child(0) {
-    animation-delay: 0s;
-    left: 66vw;
-    top: 66vh;
-    border-color: #0046d4;
+  animation-delay: 0s;
+  left: 60%;
+  top: 65%;
+  border-color: #becae3;
 }
 
 .background li:nth-child(1) {
-    animation-delay: 2s;
-    left: 35vw;
-    top: 69vh;
+  animation-delay: 2s;
+  left: 35%;
+  top: 69%;
 }
 
 .background li:nth-child(2) {
-    animation-delay: 4s;
-    left: 69vw;
-    top: 7vh;
-    border-color: #0046d4;
+  animation-delay: 4s;
+  left: 69vw;
+  top: 7vh;
+  border-color: #0046d4;
 }
 
 .background li:nth-child(3) {
-    animation-delay: 6s;
-    left: 15vw;
-    top: 30vh;
-    border-color: #0046d4;
+  animation-delay: 6s;
+  left: 15vw;
+  top: 30vh;
+  border-color: #0046d4;
 }
 
 .background li:nth-child(4) {
-    animation-delay: 8s;
-    left: 86vw;
-    top: 95vh;
-    border-color: #0046d4;
+  animation-delay: 8s;
+  left: 86vw;
+  top: 95vh;
+  border-color: #0046d4;
 }
 
 .background li:nth-child(5) {
-    animation-delay: 10s;
-    left: 16vw;
-    top: 42vh;
+  animation-delay: 10s;
+  left: 16vw;
+  top: 42vh;
+}
+
+.background li:nth-child(6) {
+  animation-delay: 12s;
+  left: 80%;
+  top: 39%;
 }
