--- a/src/components/socials/styles.css
+++ b/src/components/socials/styles.css
@@ -2,12 +2,25 @@
   background: #eeeeee00;
   padding: 25px 50px;
 }
+
 a.social {
   margin: 0 1rem;
   transition: transform 250ms;
   display: inline-block;
   color: beige;
+  padding: 7px;
 }
+
 a.social:hover {
   transform: translateY(-4px);
+}
+
+@media (max-width: 768px) {
+  .social-container {
+    gap: 0.8rem;
+  }
+
+  a.social {
+    font-size: 1.2rem;
+  }
 }
